--- a/final-project/index.html
+++ b/final-project/index.html
@@ -96,7 +96,7 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit aperiam, animi ea omnis sed praesentium maxime doloremque beatae distinctio sint officiis sit? Quae officia fugit debitis, illo nam aperiam blanditiis?
                         </p>
                         <div class="service-button">
-                            <a href="#marketing">Marketing<i class="fa-solid fa-caret-right"></i></a>
+                            <a href="#marketing">Marketing Plans <i class="fa-solid fa-caret-right"></i></a>
                         </div>
                     </div>
                     <!-- Video Production -->
@@ -107,7 +107,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus necessitatibus ipsam laudantium ullam atque sequi mollitia aliquid similique nam? Deleniti in aperiam minus? Repudiandae aliquid molestias eos, adipisci quia in!
                         </p>
                         <div class="service-button">
-                            <a href="#video-prod">Video Production<i class="fa-solid fa-caret-right"></i></a>
+                            <a href="#video-prod">Video Plans <i class="fa-solid fa-caret-right"></i></a>
                         </div>
                     </div>
                     <!-- Web Developement -->
@@ -118,7 +118,7 @@
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit fugiat ad quasi deleniti vitae iste deserunt, architecto sed explicabo assumenda ex odit, et officiis possimus recusandae iusto nisi! Laboriosam, culpa!
                         </p>
                         <div class="service-button">
-                            <a href="#web-dev">Web Developement<i class="fa-solid fa-caret-right"></i></a>
+                            <a href="#web-dev">Web Plans <i class="fa-solid fa-caret-right"></i></a>
                         </div>
                     </div>
                     <!-- Print -->
@@ -129,7 +129,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse tenetur ut, dolorum distinctio iste asperiores fugit, perferendis est ipsum deleniti magnam ea itaque enim nesciunt exercitationem a, blanditiis quo expedita.
                         </p>
                         <div class="service-button">
-                            <a href="#print">Print<i class="fa-solid fa-caret-right"></i></a>
+                            <a href="#print">Print Plans <i class="fa-solid fa-caret-right"></i></a>
                         </div>
                     </div>
                 </div>
