--- a/final-project/index.html
+++ b/final-project/index.html
@@ -169,7 +169,7 @@
                 <!-- <img src="/images/vision.jpg" alt="vision"> -->
             </section>
             <!-- Our Team Section -->
-            <section>
+            <section class="our-team">
                 <div class="wrapper">
                     <h1>Our Team</h1>
                     <div class="ceo">
@@ -180,10 +180,6 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur similique porro eveniet consequuntur. Vel nulla corporis natus ratione id saepe voluptatem inventore repellat, explicabo alias molestiae odit expedita veniam consequuntur.</p>
                         </div>
                     </div>
-                </div>
-            </section>
-            <section>
-                <div class="wrapper">
                     <div class="ceo">
                         <img src="/images/bob.jpg" alt="">
                         <div class="ceo-content">
