--- a/final-project/index.html
+++ b/final-project/index.html
@@ -87,7 +87,6 @@
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum facere dicta adipisci nesciunt quidem hic vel odio accusantium doloremque ratione? Unde alias consequatur vitae enim magni beatae officia fugit eveniet.
                             </p>    
                         </div>
-                        
                         <div class="service-button">
                             <a href="#digital-plans">Digital Plans<i class="fa-solid fa-caret-right"></i></a>
                         </div>
@@ -152,7 +151,6 @@
             <!-- Our Vision Section -->
             <section class="our-vision">
                 <div class="wrapper">
-                    
                     <!-- Div will rename later -->
                     <div class="description">
                         <h2>Our Vision</h2>
@@ -164,6 +162,7 @@
                         </div>
                     </div>
                 </div>
+            </section>
             <!-- Our Team Section -->
             <section class="our-team">
                 <div class="wrapper">
