fixed lorem ipsum filler

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -124,7 +124,7 @@
                         <div class="description">
                             <h2>Web Developement</h2>
                             <p>
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit fugiat ad quasi deleniti vitae iste deserunt, architecto sed explicabo assumenda ex odit, et officiis possimus recusandae iusto nisi! Laboriosam, culpa!
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus necessitatibus ipsam laudantium ullam atque sequi mollitia aliquid similique nam? Deleniti in aperiam minus? Repudiandae aliquid molestias eos, adipisci quia in!
                             </p>    
                         </div>
                         
@@ -138,7 +138,7 @@
                         <div class="description">
                             <h2>Print</h2>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse tenetur ut, dolorum distinctio iste asperiores fugit, perferendis est ipsum deleniti magnam ea itaque enim nesciunt exercitationem a, blanditiis quo expedita.
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus necessitatibus ipsam laudantium ullam atque sequi mollitia aliquid similique nam? Deleniti in aperiam minus? Repudiandae aliquid molestias eos, adipisci quia in!
                             </p>    
                         </div>
                         
