--- a/final-project/index.html
+++ b/final-project/index.html
@@ -18,6 +18,7 @@
                 <div class="navPages">
                     <div class="navLogo">
                         <!-- <img src="images/logo.png" alt="logo"> -->
+                        <img src="/images/logo.png" alt="logo">
                     </div>
                     <div class="page">
                         <a href="#home">Home</a>
