--- a/final-project/index.html
+++ b/final-project/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <!-- Header -->
     <header>
         <!-- Navigation Bar-->
         <nav>
@@ -57,13 +56,13 @@
                 </div>
             </div>
         </section>
-        <!--Header End  -->
     </header>
     <div class="site-content">
         <main>
             <section class="about-us">
                 <div class="wrapper">
                     <!-- <img src="/images/about-us.jpg"> -->
+                    <img src="/images/about-us.jpg" alt="about-us">
                     <div class="about-description">
                         <h1>About Us</h1>
                         <p>
