--- a/final-project/index.html
+++ b/final-project/index.html
@@ -62,7 +62,7 @@
             <section class="about-us">
                 <div class="wrapper">
                     <!-- <img src="/images/about-us.jpg"> -->
-                    <img src="/images/about-us.jpg" alt="about-us">
+                    <img src="images/about-us.jpg" alt="about-us">
                     <div class="about-description">
                         <h1>About Us</h1>
                         <p>
