--- a/final-project/index.html
+++ b/final-project/index.html
@@ -17,7 +17,7 @@
                 <div class="navPages">
                     <div class="navLogo">
                         <!-- <img src="images/logo.png" alt="logo"> -->
-                        <img src="/images/logo.png" alt="logo">
+                        <img src="images/logo.png" alt="logo">
                     </div>
                     <div class="page">
                         <a href="#home">Home</a>
@@ -80,7 +80,7 @@
                     <!-- Digital Transformation -->
                     <h1>Services</h1>
                     <div class="service">
-                        <img src="/images/digital.jpg" alt="digital">
+                        <img src="images/digital.jpg" alt="digital">
                         <div class="description">
                             <h2>Digital Transformation</h2>
                             <p>
@@ -93,7 +93,7 @@
                     </div>
                     <!-- Marketing -->
                     <div class="service">
-                        <img src="/images/marketing.jpg" alt="marketing">
+                        <img src="images/marketing.jpg" alt="marketing">
                         <div class="description">
                             <h2>Marketing</h2>
                             <p>
@@ -107,7 +107,7 @@
                     </div>
                     <!-- Video Production -->
                     <div class="service">
-                        <img src="/images/video.jpg" alt="video">
+                        <img src="images/video.jpg" alt="video">
                         <div class="description">
                             <h2>Video Production</h2>
                             <p>
@@ -120,7 +120,7 @@
                     </div>
                     <!-- Web Developement -->
                     <div class="service">
-                        <img src="/images/web.jpg" alt="web">
+                        <img src="images/web.jpg" alt="web">
                         <div class="description">
                             <h2>Web Developement</h2>
                             <p>
@@ -133,7 +133,7 @@
                     </div>
                     <!-- Print -->
                     <div class="service">
-                        <img src="/images/print.jpg" alt="">
+                        <img src="images/print.jpg" alt="">
                         <div class="description">
                             <h2>Print</h2>
                             <p>
@@ -165,13 +165,13 @@
             <section class="our-team">
                 <div class="wrapper">
                     <h1>Our Team</h1>
-                    <img src="/images/john.jpg" alt="">
+                    <img src="images/john.jpg" alt="">
                     <div class="ceo-content">
                         <h1>John Doe</h1>
                         <h3>CEO and Co-owner</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur similique porro eveniet consequuntur. Vel nulla corporis natus ratione id saepe voluptatem inventore repellat, explicabo alias molestiae odit expedita veniam consequuntur.</p>
                     </div>
-                    <img src="/images/bob.jpg" alt="">
+                    <img src="images/bob.jpg" alt="">
                     <div class="ceo-content">
                         <h1>Bob Rite</h1>
                         <h3>CFO and Co-owner</h3>
